# flaccy

./: .gitignore  CLAUDE.md  README.md  flaccy.xctestplan
Design/: AppIconGenerator.swift  ReadmeShotCompositor.swift  ScreenshotCompositor.swift
FlaccyCore/: Package.swift
flaccy/: Album.swift  AlbumArtworkCache.swift  AlbumCell.swift  AlbumDetailViewController.swift  AmbientPaletteBackdropView.swift  AppAppearance.swift  AppDelegate.swift  AppLogger.swift  ArtistAlbumsViewController.swift  ArtistDetailViewController.swift  ArtistImageService.swift  ArtworkPalette.swift  AudioPlayer.swift  Backdrop.metal  ChartsViewController.swift  ChartsViewModel.swift  DatabaseManager.swift  DetailEnrichment.swift  FilterChipsView.swift  GroqService.swift  (+73 more)
flaccy.xcodeproj/: project.pbxproj
linux/: Cargo.toml  README.md  demo-seed-stats.py  demo-seed.sh  get-flaccy.sh  install.sh  package.sh
linux/data/: cc.midgarcorp.Flaccy.desktop
linux/packaging/: PKGBUILD
linux/src/: app.rs  config.rs  db.rs  downloads.rs  enrichment.rs  events.rs  hygiene.rs  importer.rs  lastfm.rs  library.rs  logger.rs  lyrics.rs  main.rs  mpris.rs  palette.rs  player.rs  recap.rs  render.rs  samples.rs  scanner.rs  scrobbler.rs  songlink.rs  station.rs  suggested.rs  theme.rs  wantlist.rs
linux/src/ui/: albums.rs  artists.rs  artwork.rs  cleanup.rs  context.rs  controls.rs  delete.rs  downloads.rs  guide.rs  lyrics_panel.rs  mod.rs  now_playing.rs  playlists.rs  prefs.rs  queue_panel.rs  songs.rs  stats.rs  style.css  suggested_shelf.rs  transport.rs  wantlist.rs  window.rs  year_in_music.rs
(+88 files in other folders)
