[package]
name = "flaccy"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Lossless music player for Linux"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_18"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_7"] }
gst = { package = "gstreamer", version = "0.25" }
rusqlite = { version = "0.32", features = ["bundled"] }
lofty = "0.22"
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
md-5 = "0.10"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp"] }
mpris-server = "0.9"
unicode-normalization = "0.1"
chrono = "0.4"
rand = "0.9"
async-channel = "2"

[profile.release]
lto = "thin"
strip = true
